# OpenRR-v2

./: .gitignore  CMakeLists.txt
res/: .gitignore  defaultGUI.xml  resources.json
res/anims/: allOperations.anim  teleportBuilding.anim  teleportRaider.anim
res/config/: keyBindings.cfg
res/menus/: buildMenu.xml  largeVehicles.xml  notificationPanel.xml  resourceSidebar.xml  smallVehicles.xml  topMain.xml
res/mesh/: chrystal.mdl  lmsExplorer.mdl  minifig.mdl  ore.mdl
res/mesh/lxfml/: canteen.lxfml  dock.lxfml  oreRefinery.lxfml  powerStation.lxfml  powerStation_tubes.lxfml  superTeleport.lxfml  supportStation.lxfml  teleportPlatform.lxfml  toolstore.lxfml  toolstore_.lxfml  upgradeStation.lxfml
res/mesh/lxfml/rigid/: chain.lxfml  flexTest.lxfml  loop.lxfml  loop2.lxfml  stacked.lxfml  straight.lxfml  straight_angles.lxfml
res/mesh/objects3D/: chrystal.mtl  ore.mtl  ore_2.mtl  rock raider specific part numbers.txt
res/mesh/objects3D/ore/: ore.mtl
res/mesh/objects3D/textures/: toolStore.mtl
res/shaders/: default.vert  passthroughFlatColour.frag  passthroughFlatColour.vert  phong.vert  shadow_pass.vert  shadow_phong.vert
src/: main.cpp
src/gameStates/: GameEntryLoadScreen.cpp  GameEntryLoadScreen.h  OpenRRGame.cpp  OpenRRGame.h
src/map/: Map.cpp  Map.h  MapGeometryBuilder.cpp  MapGeometryBuilder.h  MapLoader.cpp  MapLoader.h  MapMetadata.h  MapResource.cpp  MapResource.h  MapTile.h  SoilType.h
